# yocaml-www

./: .gitignore  .ocamlformat  README.md  configuration.toml  dune-project  yocaml-www.opam  yocaml-www.opam.template
.github/workflows/: deploy.yml
assets/css/: fonts.css  mixins.css  reset.css  style.css  syntax.css
assets/grammars/: html.json  markdown.json  shell.json
assets/templates/: layout.html  tutorial-content.html  tutorial-layout.html
content/releases/: v100.yml  v200.yml  v201.yml  v210.yml  v220.yml  v230.yml  v240.yml  v241.yml  v250.yml  v260.yml  v270.yml  v280.yml  v300.yml
content/tutorial/: dune  index.md  installation.md  key-concepts.md  metadata-intro.md  metadata-projection.md  metadata-validation-2.md  metadata-validation.md  metadata-wrapping-up.md  path-resolver.md  path.md  preface.md  setup.md  sidebar.yml  simple-blog-articles.md  simple-blog-css.md  simple-blog-feed.md  simple-blog-final.md  simple-blog-goal.md  simple-blog-images.md  simple-blog-index.md  simple-blog-pages.md  simple-blog-server.md  task.md  validation.md  why.md
lib/: dune  env.ml  env.mli  resolver.ml  resolver.mli  rule.ml  rule.mli  specs.mli
lib/archetype/: sidebar.ml  sidebar.mli  tutorial.ml  tutorial.mli
lib/html/: document.ml  document.mli
lib/model/: configuration.ml  configuration.mli  cover.ml  cover.mli  document_kind.ml  document_kind.mli  email.ml  email.mli  field.ml  field.mli  link.ml  link.mli  make.ml  make.mli  meta_tag.ml  meta_tag.mli  profile.ml  profile.mli  release.ml  release.mli  repository.ml  repository.mli  tag.ml  tag.mli  update_stream.ml  update_stream.mli  url.ml  url.mli  version.ml  version.mli
lib/util/: gravatar.ml  map.ml  map.mli  markdown.ml  markdown.mli  option.ml  option.mli  ordered.ml  ordered.mli  set.ml  set.mli  syntax.ml  syntax.mli  template.ml  template.mli
test/: dune  email_test.ml  link_test.ml  profile_test.ml  repository_test.ml  resolver_test.ml  sidebar_test.ml  test_util.ml  url_test.ml  version_test.ml
test/common/: dune  resolver_test.ml
test/html/: dune
test/model/: cover_test.ml  dune  email_test.ml  link_test.ml  profile_test.ml  repository_test.ml  url_test.ml  util.ml  util.mli
